--- a/rbac.yaml
+++ b/rbac.yaml
@@ -31,7 +31,7 @@ rules:
     verbs: [create]
   - apiGroups: [""]
     resources: [configmaps]
-    verbs: [patch]
+    verbs: [patch, get]
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
