--- a/rbac.yaml
+++ b/rbac.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
   name: kopfexample-account
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: kopfexample-role-cluster
@@ -32,7 +32,7 @@ rules:
     resources: [configmaps]
     verbs: [patch, get, post, update, create]
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: kopfexample-rolebinding-cluster
